# krypto_julia

./: .gitignore  CMakeLists.txt  Makefile  Manifest.toml  Project.toml  README.md  build  build.bak  build.jl  build_cl.jl  experimenting.py  kauma  kauma.jl  kill_servers  main.jl  main.py  processor.jl  result_alt.json  sample.json  sample_alt.json  sample_current.json  sample_small.json  script.py  sol.json  source_files_content.txt
Krypto/lib/: libjulia.so.1.11.0  libjulia.so.1.11.1
Krypto/lib/julia/: libatomic.so.1.2.0  (+61 more)
building/: CMakeCache.txt  Makefile  cmake_install.cmake
jl/: kauma  sample_small.json
jl/src_jl/: Manifest.toml  Project.toml  build.jl
src/: Krypto.jl  main.cpp  main.py
src/algorithms/: ddf.cpp  ddf.h  edf.cpp  edf.h  gcm.cpp  gcm.h  gcm.jl  padding_oracle.cpp  padding_oracle.h  padding_oracle.jl  padding_oracle.jl.bak  poly_diff.jl  sea128.cpp  sea128.h  sea128.jl  sff.cpp  sff.h  xex_fde.cpp  xex_fde.h  xex_fde.jl
src/math/: galois.cpp  galois.h  galois.jl  galois.jl.bak  galois_fast.jl  polynom.cpp  polynom.h  polynom.jl
src/operations/: arithmetic.py  encryption.py  galois.py  padding_oracle.py  padding_oracle_chaggpt.py  polynomial.py
src/testing/: TestResultTracker.py  padding_notes.txt  padding_oracle_server.py  padding_oracle_tests.py  performance.jl  performance_arr_to_int.jl  performance_multiply.jl  tester.py
src/util/: base64_utils.cpp  base64_utils.h  conversions.jl  helper_functions.h  lookup.h  my_Stuff.txt  processor.cpp  processor.h  processor.jl  semantic_types.h  semantic_types.jl
src/utils/: conversion.py
(+15 files in other folders)
